--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
+#------------------------
+#  Main ignored items
+#------------------------
 /.vscode
 /cache
 /config.php
 /env.php
 /node_modules
 /package-lock.json
+
+
+#------------------------
+#  OS Files
+#------------------------
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+*[Tt]humbs.db
+*.Trashes
