--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
   "main": "gulpfile.js",
   "devDependencies": {
-    "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1",
-    "browser-sync": "^2.23.7",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.1.0",
+    "browser-sync": "^2.26.7",
+    "cssnano": "^4.1.10",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-plumber": "^1.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "postcss-import": "^12.0.1",
+    "postcss-purgecss": "^2.0.3",
+    "postcss-scss": "^2.0.0",
+    "tailwindcss": "^1.4.6"
+  },
+  "dependencies": {},
+  "scripts": {
+    "gulp": "gulp"
   }
 }
